--- a/public/style/bootstrap-less/buttons.less
+++ b/public/style/bootstrap-less/buttons.less
@@ -86,9 +86,9 @@
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
 }
 
-//.btn-secondary {
-//  .button-variant(@btn-secondary-color; @btn-secondary-bg; @btn-secondary-border);
-//}
+.btn-secondary {
+  .button-variant(@btn-secondary-color; @btn-secondary-bg; @btn-secondary-border);
+}
 
 // Link buttons
 // -------------------------
