--- a/public/style/bootstrap-less/variables.less
+++ b/public/style/bootstrap-less/variables.less
@@ -19,7 +19,7 @@
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
-//@brand-secondary:       #2c3692;
+@brand-secondary:       #2c3692;
 
 //== Scaffolding
 //
@@ -168,9 +168,9 @@
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
-//@btn-secondary-color:            #fff;
-//@btn-secondary-bg:               @brand-secondary;
-//@btn-secondary-border:           darken(@btn-secondary-bg, 5%);
+@btn-secondary-color:            #fff;
+@btn-secondary-bg:               @brand-secondary;
+@btn-secondary-border:           darken(@btn-secondary-bg, 5%);
 
 @btn-link-disabled-color:        @gray-light;
 
